--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,68 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+.cus-nav{
+    height: 100vh;
+    width: 70px;
+    text-align: center;
+    position: fixed !important;
+    top: 0;
+    z-index: 9999;
+    background-color: white;
+    box-shadow: -2px 1px 25px black;
+}
+.cus-nav img{
+    width: 100%;
+}
+body{
+    background: #f7f5f5;
+    font-family: Arial Narrow, sans-serif;
+}
+.cus-nav li.nav-item {
+    margin-top: 10px;
+}
+a, a:hover {
+    color: unset;
+}
+.cus-nav .nav-link {
+    display: block;
+    padding: .9rem 1rem;
+}
+li.active.nav-item {
+    border-right: #e43f5c 6px solid;
+}
+li.active.nav-item a{
+    padding-right: 9px;
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    padding-left: 70px;
+}
+.c-bule{
+color: #007bff;
+}
+.c-green{
+    color: green;
+}
+.content .row{
+    text-align: center;
+    min-height: 80vh;
+    margin-left: 70px;
+    margin-right: auto;
+}
+.round-body{
+    height: 200px;
+    background-color: white;
+    box-shadow: 0px 2px 50px -11px black;
+    border-radius: 100px;
+    width: 200px;
+}
+.round-body-text{
+    padding-top: 50px;
+}
+.letter-sp-2{
+    letter-spacing: 2px;
+}
