--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,53 +1,12 @@
-<!-- header -->
-<nav class="navbar sticky-top navbar-light flex-row-reverse">
-  <p> Welcome admin,
-    <a class="" href="#">Logout</a>
-  </p>
-</nav>
-<!-- side nav -->
-<ul class="nav nav-pills flex-column cus-nav">
-  <li class="nav-item">
-    <a class="nav-link" href="#">
-      <img src="assets/1.png">
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">
-      <i class="fa fa-object-group" aria-hidden="true"></i>
-    </a>
-  </li>
-  <li class="nav-item active">
-    <a class="nav-link" href="#">
-      <i class="fa fa-th-large" aria-hidden="true"></i>
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">
-      <i class="fa fa-question-circle-o" aria-hidden="true"></i>
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">
-      <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
-    </a>
-  </li>
-</ul>
+<app-header></app-header>
 <div class="content">
-  <div class="row align-items-center justify-content-center">
-    <div class="round-body">
-      <div class="round-body-text">
-        <h2 class="c-green letter-sp-2">Total 10</h2>
-        <p class="p-4">Product & Status</p>
+    <div routerLink="/page2" class="row align-items-center justify-content-center">
+      <div class="round-body">
+        <div class="round-body-text">
+          <h2 class="c-green letter-sp-2">Total 10</h2>
+          <p class="p-4">Product & Status</p>
+        </div>
       </div>
     </div>
-  </div>
 </div>
-<footer class="footer">
-  <div class="container">
-    <!-- Copyright -->
-    <div class="footer-copyright text-center">Copyright © 2018
-      <a class="c-bule" href="https://mdbootstrap.com/bootstrap-tutorial/"> CenturyLink,</a> All rights reserved
-    </div>
-    <!-- Copyright -->
-  </div>
-</footer>
+<app-footer></app-footer>
