--- a/src/styles.css
+++ b/src/styles.css
@@ -34,10 +34,9 @@ li.active.nav-item a{
     padding-right: 9px;
 }
 .footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
-    height: 40px;
     text-align: center;
     padding-left: 70px;
 }
@@ -53,16 +52,68 @@ color: #007bff;
     margin-left: 70px;
     margin-right: auto;
 }
+.content .row.page3{
+    text-align: center;
+    min-height: 40vh;
+    margin-left: 70px;
+    margin-right: auto;
+}
+.content .row.page3{
+    margin-left: 0px;
+}
 .round-body{
     height: 200px;
     background-color: white;
-    box-shadow: 0px 2px 50px -11px black;
+    box-shadow: 0px 2px 50px -14px black;
     border-radius: 100px;
     width: 200px;
+}
+.round-body-left{
+    height: 200px;
+    background-color: white;
+    box-shadow: 1px 2px 17px 0 #908484;
+    border-radius: 100px;
+    width: 200px;
+}
+.round-body1{
+    height: 150px;
+    background-color: white;
+    box-shadow: 0px 2px 50px -14px black;
+    border-radius: 75px;
+    width: 150px;
+}
+.round-body2{
+    height: 120px;
+    background-color: white;
+    box-shadow: 0px 2px 50px -14px black;
+    border-radius: 60px;
+    width: 120px;
 }
 .round-body-text{
     padding-top: 50px;
 }
+.round-body1 .round-body-text{
+    padding-top: 60px;
+}
 .letter-sp-2{
     letter-spacing: 2px;
 }
+@media (min-width: 768px) {
+    .pullright{
+        float: right;
+    }
+ }
+ @media (max-width: 767.98px) { 
+    .pullright{
+       text-align: center
+    }
+ }
+ .p-b-15{
+    padding-bottom: 15px;
+ }
+ .p-l-10{
+     padding-left: 10px;
+ }
+ .p-l-50{
+     padding-left: 50px;
+ }
