--- a/src/app/pages/page3/page3.component.html
+++ b/src/app/pages/page3/page3.component.html
@@ -3,39 +3,50 @@
   <div class="row align-items-center justify-content-center">
     <div class="col-lg-4 col-md-4 col-sm-12">
       <div class="round-body-left pullright m-auto">
+        <div class="round-body-nav">
+          <div class="round-body-text-nav">
+            <i aria-hidden="true" class="fa fa-arrow-left"></i>
+          </div>
+        </div>
         <div class="round-body-text">
           <h2 class="c-green letter-sp-2 p-4">Status</h2>
         </div>
       </div>
+
     </div>
     <div class="col-lg-6 col-md-6 col-sm-12">
       <div class="row page3 p-l-10">
         <div class="col align-self-end p-b-15">
-          <div class="round-body2">
+          <div class="round-body2 m-auto">
             <div class="round-body-text">
               <p class="">Product</p>
             </div>
           </div>
         </div>
         <div class="col align-self-end p-b-15">
-          <div class="round-body2">
+          <div class="round-body2 m-auto">
             <div class="round-body-text">
               <p class="">Product</p>
             </div>
           </div>
         </div>
         <div class="col align-self-end p-b-15">
-          <div class="round-body2">
+          <div class="round-body2 m-auto">
             <div class="round-body-text">
               <p class="">Product</p>
             </div>
           </div>
         </div>
         <div class="col align-self-end p-b-15">
-          <div class="round-body2">
+          <div class="round-body2 m-auto">
             <div class="round-body-text">
               <p class="">Product</p>
             </div>
+          </div>
+        </div>
+        <div class="round-body-nav2">
+          <div class="round-body-text-nav">
+            <i aria-hidden="true" class="fa fa-angle-left"></i>
           </div>
         </div>
       </div>
