--- a/src/app/pages/page3/page3.component.html
+++ b/src/app/pages/page3/page3.component.html
@@ -15,47 +15,85 @@
 
     </div>
     <div class="col-lg-6 col-md-6 col-sm-12">
-      <div class="row page3 p-l-10">
-        <div class="col align-self-end p-b-15">
-          <div class="round-body2 m-auto">
-            <div class="round-body-text">
-              <p class="">Product</p>
+      <div class="page3_h">
+        <div class="row page3 p-l-10">
+          <div class="col align-self-end p-b-15">
+            <div class="round-body2 active m-auto ">
+              <div class="round-body-text">
+                <p class="">Assigned</p>
+              </div>
+            </div>
+          </div>
+          <div class="col align-self-end p-b-15">
+            <div class="round-body2 m-auto">
+              <div class="round-body-text">
+                <p class="">Cancelled</p>
+              </div>
+            </div>
+          </div>
+          <div class="col align-self-end p-b-15">
+            <div class="round-body2 m-auto">
+              <div class="round-body-text">
+                <p class="">Completed</p>
+              </div>
+            </div>
+          </div>
+          <div class="col align-self-end p-b-15">
+            <div class="round-body2 m-auto">
+              <div class="round-body-text">
+                <p class="">In Process</p>
+              </div>
+            </div>
+          </div>
+          <div class="round-body-nav2">
+            <div class="round-body-text-nav">
+              <i aria-hidden="true" class="fa fa-angle-right"></i>
             </div>
           </div>
         </div>
-        <div class="col align-self-end p-b-15">
-          <div class="round-body2 m-auto">
-            <div class="round-body-text">
-              <p class="">Product</p>
+
+        <div class="row page3 p-l-50">
+          <div class="col-auto align-self-start">
+            <div class="round-body3 m-auto active">
+              <div class="round-body-text">
+                <p class="">4485454</p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col align-self-end p-b-15">
-          <div class="round-body2 m-auto">
-            <div class="round-body-text">
-              <p class="">Product</p>
+          <div class="col-auto align-self-start">
+            <div class="round-body3 m-auto ">
+              <div class="round-body-text">
+                <p class="">54545424</p>
+              </div>
             </div>
-          </div>
-        </div>
-        <div class="col align-self-end p-b-15">
-          <div class="round-body2 m-auto">
-            <div class="round-body-text">
-              <p class="">Product</p>
-            </div>
-          </div>
-        </div>
-        <div class="round-body-nav2">
-          <div class="round-body-text-nav">
-            <i aria-hidden="true" class="fa fa-angle-left"></i>
           </div>
         </div>
       </div>
-      <div class="row page3 p-l-50">
-        <div class="col-12 align-self-start">
-          <div class="round-body2">
-            <div class="round-body-text">
-              <p class="">Status</p>
-            </div>
+      <div class="page3_h">
+        <div class="row page3 box">
+          <div class="col-lg-3 col-md-3 col-sm-12 col1">Not Started
+            <br/>
+            <span>
+              <i aria-hidden="true" class="fa fa-times"></i>
+            </span>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-12 col2">Order Assigned
+            <br/>
+            <span>
+              <i aria-hidden="true" class="fa fa-times"></i>
+            </span>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-12 col3">Provisioning in Progress
+            <br/>
+            <span>
+              <i aria-hidden="true" class="fa fa-times"></i>
+            </span>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-12 col4">Completed
+            <br/>
+            <span>
+              <i aria-hidden="true" class="fa fa-times"></i>
+            </span>
           </div>
         </div>
       </div>
