--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
 .cus-nav{
-    height: 100vh;
+    height: 100%;
     width: 70px;
     text-align: center;
     position: fixed !important;
@@ -109,6 +109,13 @@ color: #007bff;
     border-radius: 60px;
     width: 120px;
 }
+.round-body3{
+    height: 120px;
+    background-color: #e1ffdf;
+    box-shadow: 0px 2px 50px -14px black;
+    border-radius: 60px;
+    width: 120px;
+}
 .round-body-text{
     padding-top: 50px;
 }
@@ -126,12 +133,34 @@ color: #007bff;
         float: right;
     }
     .round-body-nav2{
-        top: 25vh !important;
+        top: 10% !important;
+    }
+    .col1{
+        vertical-align: middle;
+        display: table-cell;
+    }
+    .col2{
+        vertical-align: middle;
+        display: table-cell;
+    }
+    .col3{
+        vertical-align: middle;
+        display: table-cell;
+    }
+    .col4{
+        vertical-align: middle;
+        display: table-cell;
+    }
+    .box .col1,.box .col2,.box .col3,.box .col4 {
+        width: 25%;
+    }
+    .page3.box{
+        display: table;
     }
  }
  @media (min-width: 1400px) {
     .round-body-nav2{
-        top: 30vh !important;
+        top: 10% !important;
     }
  }
  @media (max-width: 767.98px) { 
@@ -151,3 +180,36 @@ color: #007bff;
  .p-l-50{
      padding-left: 50px;
  }
+ .content .page3_h .row.page3 {
+    min-height: auto !important;
+}
+.round-body3.active,.round-body2.active  {
+    box-shadow: 0px 2px 10px 0 #0f7727;
+    border: 1px solid green;
+}
+.page3.box{
+    padding: 5% 0 0;
+}
+.box .col-3 {
+    height: 100px;
+   }
+.box  span i {
+    color: red;
+}
+.col1{
+    background-color: rgba(0, 204, 0, 0.6);
+    border-radius: 10px 0px 0 10px;
+}
+.col2{
+    background-color:white;
+}
+.col3{
+    background-color: #f3efef;
+}
+.col4{
+    background-color: #e4e3e0;
+    border-radius: 0px 10px 10px 0;
+}
+li.nav-item.active {
+    background-color: #f7f5f5;
+}
